Set Go version, update .golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,6 +26,7 @@ linters:
   disable-all: true
   enable:
     - bodyclose
+    - copyloopvar
     # - depguard
     - dogsled
     - durationcheck
@@ -34,7 +35,6 @@ linters:
     # - errorlint
     # - exhaustive
     # - exhaustivestruct
-    - exportloopref
     # - forbidigo
     # - forcetypeassert
     # - funlen
